--- a/Advert/wwwroot/scss/bootstrap-overrides/_buttons.scss
+++ b/Advert/wwwroot/scss/bootstrap-overrides/_buttons.scss
@@ -16,6 +16,11 @@
     border-color: transparent !important;
   }
   font-size: 0.9rem;
+  //padding: 0;
+  padding-top: 0px;
+  padding-right: 8px;
+  padding-bottom: 0px;
+  padding-left: 8px;
 }
 
 .btn--raised {
